# RayGame

./: CMakeLists.txt  main.cpp  run.sh
src/: Entity.hpp  WindowManager.hpp  animatedSprite.cpp  animatedSprite.hpp  entity.cpp  entity.hpp  globals.hpp  keyInput.hpp  logs.hpp  player.cpp  player.hpp  sprite.cpp  sprite.hpp  windowManager.hpp
